K8s/manifests/mosquitto.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto-deployment
  labels:
    app: mosquitto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
    spec:
      containers:
        - name: mosquitto
          image: localhost:5000/mosquitto:${tag}
          resources:
            requests:
              memory: "64Mi"
              cpu: "128m"
            limits:
              memory: "64Mi"
              cpu: "128m"
          ports:
            - containerPort: 9001
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
spec:
  selector:
    app: mosquitto
  ports:
    - protocol: TCP
      port: 9001
      targetPort: 9001
